-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0 Beta
-
None
-
Tested in iOS 8.1.1, Qt 5.4.0 Beta
QStandardPaths::writableLocation(QStandardPaths::PicturesLocation);
return a non empty path on iOS, but that is not writable, nor can one create the path.
some test code below to past into hello world:
QString _savePath = QStandardPaths::writableLocation(QStandardPaths::PicturesLocation);
QDir dir(_savePath);
if (!dir.exists()) {
if (!dir.mkpath(_savePath))
}
QFile f(_savePath+"/test.tmp");
if (f.open(QIODevice::WriteOnly))
For Gerrit Dashboard: QTBUG-42804 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
110139,4 | qstandardpaths_ios: return writable locations for Fonts, Music, Movies, Pictures and Download | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |